docs: fix medusa-react guide by adding missing link

--- a/www/apps/docs/content/medusa-react/overview.mdx
+++ b/www/apps/docs/content/medusa-react/overview.mdx
@@ -29,7 +29,7 @@ In addition to the `medusa-react` library, you need the following libraries:
 
 :::note
 
-Versions of Medusa React prior to v4.0.2 used React Query v3 instead of Tanstack Query. Check out [this upgrade guide] to learn how you can update your storefront.
+Versions of Medusa React prior to v4.0.2 used React Query v3 instead of Tanstack Query. Check out [this upgrade guide](../upgrade-guides/medusa-react/4.0.2.md) to learn how you can update your storefront.
 
 :::
 
