docs: fix medusa-react guide + specify react-query version (#5918)
* docs: fix medusa-react guide by adding missing link

* fix link

* add v4.22 as the supported version of react-query

--- a/www/apps/docs/content/medusa-react/overview.mdx
+++ b/www/apps/docs/content/medusa-react/overview.mdx
@@ -20,16 +20,16 @@ Alternatively, you can use Medusa’s [JS Client](../js-client/overview.mdx) or 
 In the directory holding your React-based storefront or admin dashboard, run the following command to install Medusa React:
 
 ```bash npm2yarn
-npm install medusa-react @tanstack/react-query @medusajs/medusa
+npm install medusa-react @tanstack/react-query@4.22 @medusajs/medusa
 ```
 
 In addition to the `medusa-react` library, you need the following libraries:
 
-1\. `@tanstack/react-query`: `medusa-react` is built on top of [Tanstack Query](https://tanstack.com/query/latest/docs/react/overview). You’ll learn later in this reference how you can use Mutations and Queries with Medusa React.
+1\. `@tanstack/react-query`: `medusa-react` is built on top of [Tanstack Query v4.22](https://tanstack.com/query/v4/docs/react/overview). You’ll learn later in this reference how you can use Mutations and Queries with Medusa React.
 
 :::note
 
-Versions of Medusa React prior to v4.0.2 used React Query v3 instead of Tanstack Query. Check out [this upgrade guide] to learn how you can update your storefront.
+Versions of Medusa React prior to v4.0.2 used React Query v3 instead of Tanstack Query. Check out [this upgrade guide](../upgrade-guides/medusa-react/4-0-2.md) to learn how you can update your storefront.
 
 :::
 
