--- a/www/apps/docs/content/deployments/server/deploying-on-heroku.mdx
+++ b/www/apps/docs/content/deployments/server/deploying-on-heroku.mdx
@@ -151,10 +151,10 @@ If you use in your Medusa backend modules that require setting environment varia
 For example, if you use the Redis Event Bus module:
 
 ```bash
-heroku config:set EVENT_REDIS_URL=<YOUR_REDIS_URL>
+heroku config:set EVENTS_REDIS_URL=<YOUR_REDIS_URL>
 ```
 
-Make sure to change `EVENT_REDIS_URL` to the environment variable name you use for your module's configurations.
+Make sure to change `EVENTS_REDIS_URL` to the environment variable name you use for your module's configurations.
 
 If your module requires setting up other services, do that then add the environment variables.
 
