--- a/www/apps/docs/content/deployments/server/deploying-on-heroku.mdx
+++ b/www/apps/docs/content/deployments/server/deploying-on-heroku.mdx
@@ -146,7 +146,7 @@ However, if you use another add-on, make sure to set the environment variable `D
 
 #### (Optional) Configure Modules Environment Variables
 
-If you use any code in your Medusa backend modules that require setting environment variables, then you should set them at this point.
+If you use modules in your Medusa backend that require setting environment variables, then you should set them at this point.
 
 For example, if you use the Redis Event Bus module:
 
