--- a/packages/admin-next/dashboard/public/locales/en/translation.json
+++ b/packages/admin-next/dashboard/public/locales/en/translation.json
@@ -48,7 +48,11 @@
     "domain": "Pricing"
   },
   "profile": {
-    "domain": "Profile"
+    "domain": "Profile",
+    "manageYourProfileDetails": "Manage your profile details",
+    "editProfileDetails": "Edit Profile Details",
+    "languageHint": "The language you want to use in the admin dashboard. This will not change the language of your store.",
+    "userInsightsHint": "Share usage insights and help us improve Medusa. You can read more about what we collect and how we use it in our <0>documentation</0>."
   },
   "users": {
     "domain": "Users",
@@ -61,12 +65,15 @@
   },
   "store": {
     "domain": "Store",
-    "manageYourStoresDetails": "Manage your store's details.",
-    "editStoreDetails": "Edit store details",
+    "manageYourStoresDetails": "Manage your store's details",
+    "editStoreDetails": "Edit Store Details",
     "storeName": "Store name",
     "swapLinkTemplate": "Swap link template",
     "paymentLinkTemplate": "Payment link template",
     "inviteLinkTemplate": "Invite link template"
+  },
+  "regions": {
+    "domain": "Regions"
   },
   "fields": {
     "name": "Name",
