split utilities into different directories

--- a/www/apps/docs/content/references/medusa_react/Providers/medusa_react.Providers.Cart.mdx
+++ b/www/apps/docs/content/references/medusa_react/Providers/medusa_react.Providers.Cart.mdx
@@ -1,6 +1,7 @@
 ---
 displayed_sidebar: medusaReactSidebar
 slug: /references/medusa-react/providers/cart
+sidebar_label: Cart
 ---
 
 import ParameterTypes from "@site/src/components/ParameterTypes"
