--- a/www/apps/docs/content/references/medusa_react/Providers/medusa_react.Providers.Medusa.mdx
+++ b/www/apps/docs/content/references/medusa_react/Providers/medusa_react.Providers.Medusa.mdx
@@ -1,6 +1,7 @@
 ---
 displayed_sidebar: medusaReactSidebar
 slug: /references/medusa-react/providers/medusa
+sidebar_label: Medusa
 ---
 
 import ParameterTypes from "@site/src/components/ParameterTypes"
