--- a/www/apps/docs/content/references/medusa_react/Providers/medusa_react.Providers.Session_Cart.mdx
+++ b/www/apps/docs/content/references/medusa_react/Providers/medusa_react.Providers.Session_Cart.mdx
@@ -1,6 +1,7 @@
 ---
 displayed_sidebar: medusaReactSidebar
 slug: /references/medusa-react/providers/session_cart
+sidebar_label: Session_Cart
 ---
 
 import ParameterTypes from "@site/src/components/ParameterTypes"
