--- a/www/apps/docs/content/references/medusa_react/medusa_react.Utilities.mdx
+++ b/www/apps/docs/content/references/medusa_react/medusa_react.Utilities.mdx
@@ -9,220 +9,10 @@ import ParameterTypes from "@site/src/components/ParameterTypes"
 
 `medusa-react` exposes a set of utility functions that are mainly used to retrieve or format the price of a product variant.
 
-## computeAmount
+## Functions
 
-This utility function can be used to compute the price of an amount for a region and retrieve the amount without formatting. For example, `20`.
-This function is used by [formatAmount](medusa_react.Utilities.mdx#formatamount) before applying the price formatting.
-
-The main difference between this utility function and [computeVariantPrice](medusa_react.Utilities.mdx#computevariantprice) is that you don’t need to pass a complete variant object. This can be used with any number.
-
-### Example
-
-```tsx title="src/MyComponent.ts"
-import React from "react"
-import { computeAmount } from "medusa-react"
-
-const MyComponent = () => {
-  // ...
-  return (
-    <div>
-      {computeAmount({
-        amount,
-        region, // should be retrieved earlier
-      })}
-    </div>
-  )
-}
-```
-
-### Parameters
-
-<ParameterTypes parameters={[{"name":"params0","type":"[ComputeAmountParams](types/medusa_react.ComputeAmountParams.mdx)","description":"The options to compute the amount.","optional":false,"defaultValue":"","expandable":false,"children":[{"name":"amount","type":"`number`","description":"The original amount used for computation.","optional":false,"defaultValue":"","expandable":false,"children":[]},{"name":"region","type":"[RegionInfo](types/medusa_react.RegionInfo.mdx)","description":"The region's details.","optional":false,"defaultValue":"","expandable":false,"children":[{"name":"currency_code","type":"`string`","description":"The three character currency code used in the region.","optional":false,"defaultValue":"","expandable":false,"children":[]},{"name":"tax_code","type":"`string`","description":"The tax code used on purchases in the Region. This may be used by other systems for accounting purposes.","optional":false,"defaultValue":"","expandable":false,"children":[]},{"name":"tax_rate","type":"`number`","description":"The tax rate that should be charged on purchases in the Region.","optional":false,"defaultValue":"","expandable":false,"children":[]}]},{"name":"includeTaxes","type":"`boolean`","description":"Whether the computed price should include taxes or not.","optional":true,"defaultValue":"true","expandable":false,"children":[]}]}]} />
-
-### Returns
-
-<ParameterTypes parameters={[{"name":"number","type":"`number`","optional":false,"defaultValue":"","description":"The computed amount.","expandable":false,"children":[]}]} />
-
-___
-
-## computeVariantPrice
-
-This utility function can be used to compute the price of a variant for a region and retrieve the amount without formatting. 
-For example, `20`. This method is used by [formatVariantPrice](medusa_react.Utilities.mdx#formatvariantprice) before applying the price formatting.
-
-### Example
-
-```tsx title="src/Products.ts"
-import React from "react"
-import { computeVariantPrice } from "medusa-react"
-import { Product, ProductVariant } from "@medusajs/medusa"
-
-const Products = () => {
-  // ...
-  return (
-    <ul>
-      {products?.map((product: Product) => (
-        <li key={product.id}>
-          {product.title}
-          <ul>
-            {product.variants.map((variant: ProductVariant) => (
-              <li key={variant.id}>
-                {computeVariantPrice({
-                  variant,
-                  region, // should be retrieved earlier
-                })}
-              </li>
-            ))}
-          </ul>
-        </li>
-      ))}
-    </ul>
-  )
-}
-```
-
-### Parameters
-
-<ParameterTypes parameters={[{"name":"param0","type":"[ComputeVariantPriceParams](interfaces/medusa_react.ComputeVariantPriceParams.mdx)","description":"Options to compute the variant's price.","optional":false,"defaultValue":"","expandable":false,"children":[{"name":"region","type":"[RegionInfo](types/medusa_react.RegionInfo.mdx)","description":"A region's details.","optional":false,"defaultValue":"","expandable":false,"children":[{"name":"currency_code","type":"`string`","description":"The three character currency code used in the region.","optional":false,"defaultValue":"","expandable":false,"children":[]},{"name":"tax_code","type":"`string`","description":"The tax code used on purchases in the Region. This may be used by other systems for accounting purposes.","optional":false,"defaultValue":"","expandable":false,"children":[]},{"name":"tax_rate","type":"`number`","description":"The tax rate that should be charged on purchases in the Region.","optional":false,"defaultValue":"","expandable":false,"children":[]}]},{"name":"variant","type":"[ProductVariantInfo](types/medusa_react.ProductVariantInfo.mdx)","description":"A variant's details.","optional":false,"defaultValue":"","expandable":false,"children":[{"name":"prices","type":"[MoneyAmount](../entities/classes/entities.MoneyAmount.mdx)[]","description":"The details of the prices of the Product Variant, each represented as a Money Amount. Each Money Amount represents a price in a given currency or a specific Region.","optional":false,"defaultValue":"","expandable":true,"children":[]}]},{"name":"includeTaxes","type":"`boolean`","description":"Whether the computed price should include taxes or not.","optional":true,"defaultValue":"true","expandable":false,"children":[]}]}]} />
-
-### Returns
-
-<ParameterTypes parameters={[{"name":"number","type":"`number`","optional":false,"defaultValue":"","description":"The computed price of the variant.","expandable":false,"children":[]}]} />
-
-___
-
-## formatAmount
-
-This utility function can be used to compute the price of an amount for a region and retrieve the formatted amount. For example, `$20.00`.
-
-The main difference between this utility function and [formatVariantPrice](medusa_react.Utilities.mdx#formatvariantprice) is that you don’t need to pass a complete variant object. This can be used with any number.
-
-### Example
-
-```ts
-import React from "react"
-import { formatVariantPrice } from "medusa-react"
-import { Product, ProductVariant } from "@medusajs/medusa"
-
-const Products = () => {
-  // ...
-  return (
-    <ul>
-      {products?.map((product: Product) => (
-        <li key={product.id}>
-          {product.title}
-          <ul>
-            {product.variants.map((variant: ProductVariant) => (
-              <li key={variant.id}>
-                {formatVariantPrice({
-                  variant,
-                  region, // should be retrieved earlier
-                })}
-              </li>
-            ))}
-          </ul>
-        </li>
-      ))}
-    </ul>
-  )
-}
-```
-
-### Parameters
-
-<ParameterTypes parameters={[{"name":"param0","type":"[FormatAmountParams](types/medusa_react.FormatAmountParams.mdx)","description":"Options to format the amount.","optional":false,"defaultValue":"","expandable":false,"children":[{"name":"amount","type":"`number`","description":"The original amount used for computation.","optional":false,"defaultValue":"","expandable":false,"children":[]},{"name":"region","type":"[RegionInfo](types/medusa_react.RegionInfo.mdx)","description":"The region's details.","optional":false,"defaultValue":"","expandable":false,"children":[{"name":"currency_code","type":"`string`","description":"The three character currency code used in the region.","optional":false,"defaultValue":"","expandable":false,"children":[]},{"name":"tax_code","type":"`string`","description":"The tax code used on purchases in the Region. This may be used by other systems for accounting purposes.","optional":false,"defaultValue":"","expandable":false,"children":[]},{"name":"tax_rate","type":"`number`","description":"The tax rate that should be charged on purchases in the Region.","optional":false,"defaultValue":"","expandable":false,"children":[]}]},{"name":"includeTaxes","type":"`boolean`","description":"Whether the computed price should include taxes or not.","optional":true,"defaultValue":"true","expandable":false,"children":[]},{"name":"locale","type":"`string`","description":"A BCP 47 language tag. The default value is `en-US`. This is passed as a first parameter to `Intl.NumberFormat` which is used within the utility method. \nYou can learn more about this method’s parameters in \n[MDN’s documentation](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global\\_Objects/Intl/NumberFormat/NumberFormat#parameters).","optional":true,"defaultValue":"","expandable":false,"children":[]},{"name":"maximumFractionDigits","type":"`number`","description":"The maximum number of fraction digits to use when formatting the price. This is passed as an option to `Intl.NumberFormat` which is used within the utility method. \nYou can learn more about this method’s options in \n[MDN’s documentation](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global\\_Objects/Intl/NumberFormat/NumberFormat#parameters).","optional":true,"defaultValue":"","expandable":false,"children":[]},{"name":"minimumFractionDigits","type":"`number`","description":"The minimum number of fraction digits to use when formatting the price. This is passed as an option to `Intl.NumberFormat` in the underlying layer. \nYou can learn more about this method’s options in \n[MDN’s documentation](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global\\_Objects/Intl/NumberFormat/NumberFormat#parameters).","optional":true,"defaultValue":"","expandable":false,"children":[]}]}]} />
-
-### Returns
-
-<ParameterTypes parameters={[{"name":"string","type":"`string`","optional":false,"defaultValue":"","description":"The formatted price.","expandable":false,"children":[]}]} />
-
-___
-
-## formatVariantPrice
-
-This utility function can be used to compute the price of a variant for a region and retrieve the formatted amount. For example, `$20.00`.
-
-### Example
-
-```tsx title="src/Products.ts"
-import React from "react"
-import { formatVariantPrice } from "medusa-react"
-import { Product, ProductVariant } from "@medusajs/medusa"
-
-const Products = () => {
-  // ...
-  return (
-    <ul>
-      {products?.map((product: Product) => (
-        <li key={product.id}>
-          {product.title}
-          <ul>
-            {product.variants.map((variant: ProductVariant) => (
-              <li key={variant.id}>
-                {formatVariantPrice({
-                  variant,
-                  region, // should be retrieved earlier
-                })}
-              </li>
-            ))}
-          </ul>
-        </li>
-      ))}
-    </ul>
-  )
-}
-```
-
-### Parameters
-
-<ParameterTypes parameters={[{"name":"param0","type":"[FormatVariantPriceParams](interfaces/medusa_react.FormatVariantPriceParams.mdx)","description":"Options to format the variant's price.","optional":false,"defaultValue":"","expandable":false,"children":[{"name":"region","type":"[RegionInfo](types/medusa_react.RegionInfo.mdx)","description":"A region's details.","optional":false,"defaultValue":"","expandable":false,"children":[{"name":"currency_code","type":"`string`","description":"The three character currency code used in the region.","optional":false,"defaultValue":"","expandable":false,"children":[]},{"name":"tax_code","type":"`string`","description":"The tax code used on purchases in the Region. This may be used by other systems for accounting purposes.","optional":false,"defaultValue":"","expandable":false,"children":[]},{"name":"tax_rate","type":"`number`","description":"The tax rate that should be charged on purchases in the Region.","optional":false,"defaultValue":"","expandable":false,"children":[]}]},{"name":"variant","type":"[ProductVariantInfo](types/medusa_react.ProductVariantInfo.mdx)","description":"A variant's details.","optional":false,"defaultValue":"","expandable":false,"children":[{"name":"prices","type":"[MoneyAmount](../entities/classes/entities.MoneyAmount.mdx)[]","description":"The details of the prices of the Product Variant, each represented as a Money Amount. Each Money Amount represents a price in a given currency or a specific Region.","optional":false,"defaultValue":"","expandable":true,"children":[]}]},{"name":"includeTaxes","type":"`boolean`","description":"Whether the computed price should include taxes or not.","optional":true,"defaultValue":"true","expandable":false,"children":[]},{"name":"locale","type":"`string`","description":"A BCP 47 language tag. The default value is `en-US`. This is passed as a first parameter to `Intl.NumberFormat` which is used within the utility method. \nYou can learn more about this method’s parameters in \n[MDN’s documentation](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global\\_Objects/Intl/NumberFormat/NumberFormat#parameters).","optional":true,"defaultValue":"","expandable":false,"children":[]},{"name":"maximumFractionDigits","type":"`number`","description":"The maximum number of fraction digits to use when formatting the price. This is passed as an option to `Intl.NumberFormat` which is used within the utility method.\nYou can learn more about this method’s options in \n[MDN’s documentation](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global\\_Objects/Intl/NumberFormat/NumberFormat#parameters).","optional":true,"defaultValue":"","expandable":false,"children":[]},{"name":"minimumFractionDigits","type":"`number`","description":"The minimum number of fraction digits to use when formatting the price. This is passed as an option to `Intl.NumberFormat` in the underlying layer. \nYou can learn more about this method’s options in \n[MDN’s documentation](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global\\_Objects/Intl/NumberFormat/NumberFormat#parameters).","optional":true,"defaultValue":"","expandable":false,"children":[]}]}]} />
-
-### Returns
-
-<ParameterTypes parameters={[{"name":"string","type":"`string`","optional":false,"defaultValue":"","description":"The formatted price.","expandable":false,"children":[]}]} />
-
-___
-
-## getVariantPrice
-
-This utility function is used to retrieve a variant's price in a region. It doesn't take into account taxes or any options, so you typically wouldn't need this function on its own.
-It's used by the [computeVariantPrice](medusa_react.Utilities.mdx#computevariantprice) function to retrieve the variant's price in a region before computing the correct price for the options provided.
-
-### Example
-
-```tsx title="src/Products.ts"
-import React from "react"
-import { getVariantPrice } from "medusa-react"
-import { Product, ProductVariant } from "@medusajs/medusa"
-
-const Products = () => {
-  // ...
-  return (
-    <ul>
-      {products?.map((product: Product) => (
-        <li key={product.id}>
-          {product.title}
-          <ul>
-            {product.variants.map((variant: ProductVariant) => (
-              <li key={variant.id}>
-                {getVariantPrice(
-                  variant,
-                  region, // should be retrieved earlier
-                )}
-              </li>
-            ))}
-          </ul>
-        </li>
-      ))}
-    </ul>
-  )
-}
-```
-
-### Parameters
-
-<ParameterTypes parameters={[{"name":"variant","type":"[ProductVariantInfo](types/medusa_react.ProductVariantInfo.mdx)","description":"The variant's details.","optional":false,"defaultValue":"","expandable":false,"children":[{"name":"prices","type":"[MoneyAmount](../entities/classes/entities.MoneyAmount.mdx)[]","description":"The details of the prices of the Product Variant, each represented as a Money Amount. Each Money Amount represents a price in a given currency or a specific Region.","optional":false,"defaultValue":"","expandable":true,"children":[{"name":"amount","type":"`number`","description":"The amount in the smallest currecny unit (e.g. cents 100 cents to charge $1) that the Product Variant will cost.","optional":false,"defaultValue":"","expandable":false,"children":[]},{"name":"created_at","type":"`Date`","description":"The date with timezone at which the resource was created.","optional":false,"defaultValue":"","expandable":false,"children":[]},{"name":"currency_code","type":"`string`","description":"The 3 character currency code that the money amount may belong to.","optional":false,"defaultValue":"","expandable":false,"children":[]},{"name":"deleted_at","type":"`null` \\| `Date`","description":"The date with timezone at which the resource was deleted.","optional":false,"defaultValue":"","expandable":false,"children":[]},{"name":"id","type":"`string`","description":"The money amount's ID","optional":false,"defaultValue":"","expandable":false,"children":[]},{"name":"max_quantity","type":"`null` \\| `number`","description":"The maximum quantity that the Money Amount applies to. If this value is not set, the Money Amount applies to all quantities.","optional":false,"defaultValue":"","expandable":false,"children":[]},{"name":"min_quantity","type":"`null` \\| `number`","description":"The minimum quantity that the Money Amount applies to. If this value is not set, the Money Amount applies to all quantities.","optional":false,"defaultValue":"","expandable":false,"children":[]},{"name":"price_list","type":"`null` \\| [PriceList](../entities/classes/entities.PriceList.mdx)","description":"The details of the price list that the money amount may belong to.","optional":false,"defaultValue":"","expandable":true,"children":[]},{"name":"price_list_id","type":"`null` \\| `string`","description":"The ID of the price list that the money amount may belong to.","optional":false,"defaultValue":"","expandable":false,"children":[]},{"name":"region_id","type":"`null` \\| `string`","description":"The region's ID","optional":false,"defaultValue":"","expandable":false,"children":[]},{"name":"updated_at","type":"`Date`","description":"The date with timezone at which the resource was updated.","optional":false,"defaultValue":"","expandable":false,"children":[]},{"name":"variant","type":"[ProductVariant](../entities/classes/entities.ProductVariant.mdx)","description":"The details of the product variant that the money amount may belong to.","optional":false,"defaultValue":"","expandable":true,"children":[]},{"name":"variant_id","type":"`string`","description":"The ID of the Product Variant contained in the Line Item.","optional":false,"defaultValue":"","expandable":false,"children":[]},{"name":"variants","type":"[ProductVariant](../entities/classes/entities.ProductVariant.mdx)[]","description":"","optional":false,"defaultValue":"","expandable":false,"children":[]},{"name":"currency","type":"[Currency](../entities/classes/entities.Currency.mdx)","description":"The details of the currency that the money amount may belong to.","optional":true,"defaultValue":"","expandable":true,"children":[]},{"name":"region","type":"[Region](../entities/classes/entities.Region.mdx)","description":"The details of the region that the money amount may belong to.","optional":true,"defaultValue":"","expandable":true,"children":[]}]}]},{"name":"region","type":"[RegionInfo](types/medusa_react.RegionInfo.mdx)","description":"The region's details.","optional":false,"defaultValue":"","expandable":false,"children":[{"name":"currency_code","type":"`string`","description":"The three character currency code used in the region.","optional":false,"defaultValue":"","expandable":false,"children":[]},{"name":"tax_code","type":"`string`","description":"The tax code used on purchases in the Region. This may be used by other systems for accounting purposes.","optional":false,"defaultValue":"","expandable":false,"children":[]},{"name":"tax_rate","type":"`number`","description":"The tax rate that should be charged on purchases in the Region.","optional":false,"defaultValue":"","expandable":false,"children":[]}]}]} />
-
-### Returns
-
-<ParameterTypes parameters={[{"name":"number","type":"`number`","optional":false,"defaultValue":"","description":"The variant's price in a region.","expandable":false,"children":[]}]} />
+- [computeAmount](Utilities/functions/medusa_react.Utilities.computeAmount.mdx)
+- [computeVariantPrice](Utilities/functions/medusa_react.Utilities.computeVariantPrice.mdx)
+- [formatAmount](Utilities/functions/medusa_react.Utilities.formatAmount.mdx)
+- [formatVariantPrice](Utilities/functions/medusa_react.Utilities.formatVariantPrice.mdx)
+- [getVariantPrice](Utilities/functions/medusa_react.Utilities.getVariantPrice.mdx)
