added link to customer authentication section

--- a/www/apps/docs/content/medusa-react/overview.mdx
+++ b/www/apps/docs/content/medusa-react/overview.mdx
@@ -203,7 +203,7 @@ Learn more about how you can use mutations in [Tanstack Query’s documentation]
 
 ## Authentication
 
-### Admin User
+### Admin Authentication
 
 There are two ways to authenticate an admin user:
 
@@ -270,7 +270,7 @@ For example:
   </TabItem>
 </Tabs>
 
-### Customer
+### Customer Authentication
 
 To authenticate a customer, use the [useMedusa hook](../references/medusa_react/Providers/medusa_react.Providers.Medusa.mdx#usemedusa) to access the underlying [Medusa JS Client](../js-client/overview.mdx) instance and use one of its [authentication methods](../js-client/overview.mdx#authentication), such as the [authenticate](../references/js_client/classes/js_client.AuthResource.mdx#authenticate) method.
 
