--- a/www/apps/docs/content/references/medusa_react/Hooks/Admin/medusa_react.Hooks.Admin.Auth.mdx
+++ b/www/apps/docs/content/references/medusa_react/Hooks/Admin/medusa_react.Hooks.Admin.Auth.mdx
@@ -20,7 +20,8 @@ Related Guide: [How to implement user profiles](https://docs.medusajs.com/module
 
 ### useAdminLogin
 
-This hook is used to log a User in using their credentials. If the user is authenticated successfully, the cookie is automatically attached to subsequent requests sent with other hooks.
+This hook is used to log a User in using their credentials. If the user is authenticated successfully, 
+the cookie is automatically attached to subsequent requests sent with other hooks.
 
 #### Example
 
