--- a/www/apps/docs/content/references/medusa_react/Hooks/Store/medusa_react.Hooks.Store.Customers.mdx
+++ b/www/apps/docs/content/references/medusa_react/Hooks/Store/medusa_react.Hooks.Store.Customers.mdx
@@ -62,7 +62,7 @@ export default RegisterCustomer
 
 ### useUpdateMe
 
-This hook updates the logged-in customer's details. This hook requires customer authentication.
+This hook updates the logged-in customer's details. This hook requires [customer authentication](https://docs.medusajs.com/medusa-react/overview#customer-authentication).
 
 #### Example
 
@@ -112,7 +112,7 @@ ___
 
 ### useMeCustomer
 
-This hook retrieves the logged-in customer's details. It requires customer authentication.
+This hook retrieves the logged-in customer's details. It requires [customer authentication](https://docs.medusajs.com/medusa-react/overview#customer-authentication).
 
 #### Example
 
@@ -143,7 +143,7 @@ export default Customer
 ### useCustomerOrders
 
 This hook retrieves a list of the logged-in customer's orders. The orders can be filtered by fields such as `status` or `fulfillment_status`. The orders can also be paginated.
-This hook requires customer authentication.
+This hook requires [customer authentication](https://docs.medusajs.com/medusa-react/overview#customer-authentication).
 
 #### Example
 
