fix lint errors

--- a/www/apps/docs/content/medusa-react/overview.mdx
+++ b/www/apps/docs/content/medusa-react/overview.mdx
@@ -291,7 +291,7 @@ const CustomerLogin = () => {
   ) => {
     client.auth.authenticate({
       email,
-      password
+      password,
     })
     .then(() => {
       // customer is logged-in successfully
