--- a/www/apps/docs/content/references/medusa_react/Hooks/Admin/medusa_react.Hooks.Admin.Gift_Cards.mdx
+++ b/www/apps/docs/content/references/medusa_react/Hooks/Admin/medusa_react.Hooks.Admin.Gift_Cards.mdx
@@ -12,7 +12,7 @@ Queries and Mutations listed here are used to send requests to the [Admin Gift C
 All hooks listed require [user authentication](medusa_react.Hooks.Admin.Auth.mdx#useadminlogin).
 
 Admins can create gift cards and send them directly to customers, specifying options like their balance, region, and more.
-These gift cards are different than the saleable gift cards in a store, which are created and managed through useAdminCreateProduct.
+These gift cards are different than the saleable gift cards in a store, which are created and managed through [useAdminCreateProduct](medusa_react.Hooks.Admin.Products.mdx#useadmincreateproduct).
 
 Related Guide: [How to manage gift cards](https://docs.medusajs.com/modules/gift-cards/admin/manage-gift-cards#manage-custom-gift-cards).
 
