--- a/www/apps/docs/content/references/medusa_react/Hooks/Store/medusa_react.Hooks.Store.Carts.mdx
+++ b/www/apps/docs/content/references/medusa_react/Hooks/Store/medusa_react.Hooks.Store.Carts.mdx
@@ -12,8 +12,8 @@ Queries and Mutations listed here are used to send requests to the [Store Cart A
 A cart is a virtual shopping bag that customers can use to add items they want to purchase.
 A cart is then used to checkout and place an order.
 
-The hooks listed have general examples on how to use them, but it's highly recommended to use the CartProvider provider and
-the useCart hook to manage your cart and access the current cart across your application.
+The hooks listed have general examples on how to use them, but it's highly recommended to use the [CartProvider](../../Providers/medusa_react.Providers.Cart.mdx#cartprovider) provider and
+the [useCart](../../Providers/medusa_react.Providers.Cart.mdx#usecart) hook to manage your cart and access the current cart across your application.
 
 Related Guide: [How to implement cart functionality in your storefront](https://docs.medusajs.com/modules/carts-and-checkout/storefront/implement-cart).
 
