--- a/www/apps/docs/content/references/medusa_react/Hooks/Store/medusa_react.Hooks.Store.Line_Items.mdx
+++ b/www/apps/docs/content/references/medusa_react/Hooks/Store/medusa_react.Hooks.Store.Line_Items.mdx
@@ -9,8 +9,8 @@ import ParameterTypes from "@site/src/components/ParameterTypes"
 
 Mutations listed here are used to send requests to the Line Item API Routes part of the [Store Cart API Routes](https://docs.medusajs.com/api/store#carts).
 
-The hooks listed have general examples on how to use them, but it's highly recommended to use the CartProvider provider and
-the useCart hook to manage your cart and access the current cart across your application.
+The hooks listed have general examples on how to use them, but it's highly recommended to use the [CartProvider](../../Providers/medusa_react.Providers.Cart.mdx#cartprovider) provider and
+the [useCart](../../Providers/medusa_react.Providers.Cart.mdx#usecart) hook to manage your cart and access the current cart across your application.
 
 ## Mutations
 
