--- a/www/apps/docs/content/references/medusa_react/Hooks/Store/medusa_react.Hooks.Store.Order_Edits.mdx
+++ b/www/apps/docs/content/references/medusa_react/Hooks/Store/medusa_react.Hooks.Store.Order_Edits.mdx
@@ -67,7 +67,7 @@ export default OrderEdit
 ### useCompleteOrderEdit
 
 This hook completes and confirms an Order Edit and reflect its changes on the original order. Any additional payment required must 
-be authorized first using the useAuthorizePaymentSession hook.
+be authorized first using the [useAuthorizePaymentSession](medusa_react.Hooks.Store.Payment_Collections.mdx#useauthorizepaymentsession) hook.
 
 #### Example
 
