--- a/www/apps/docs/content/references/medusa_react/Providers/medusa_react.Providers.Session_Cart.mdx
+++ b/www/apps/docs/content/references/medusa_react/Providers/medusa_react.Providers.Session_Cart.mdx
@@ -10,7 +10,7 @@ import ParameterTypes from "@site/src/components/ParameterTypes"
 
 ## SessionCartProvider
 
-Unlike the CartProvider, `SessionProvider` never interacts with the Medusa backend. It can be used to implement the user experience related to managing a cart’s items. 
+Unlike the [CartProvider](medusa_react.Providers.Cart.mdx#cartprovider), `SessionProvider` never interacts with the Medusa backend. It can be used to implement the user experience related to managing a cart’s items. 
 Its state variables are JavaScript objects living in the browser, but are in no way communicated with the backend.
 
 You can use the `SessionProvider` as a lightweight client-side cart functionality. It’s not stored in any database or on the Medusa backend.
