--- a/www/apps/docs/content/references/medusa_react/Hooks/Store/medusa_react.Hooks.Store.Swaps.mdx
+++ b/www/apps/docs/content/references/medusa_react/Hooks/Store/medusa_react.Hooks.Store.Swaps.mdx
@@ -19,7 +19,7 @@ Related Guide: [How to create a swap in a storefront](https://docs.medusajs.com/
 ### useCreateSwap
 
 This hook creates a Swap for an Order. This will also create a return and associate it with the swap. If a return shipping option is specified, the return will automatically be fulfilled.
-To complete the swap, you must use the useCompleteCart hook passing it the ID of the swap's cart.
+To complete the swap, you must use the [useCompleteCart](medusa_react.Hooks.Store.Carts.mdx#usecompletecart) hook passing it the ID of the swap's cart.
 
 An idempotency key will be generated if none is provided in the header `Idempotency-Key` and added to
 the response. If an error occurs during swap creation or the request is interrupted for any reason, the swap creation can be retried by passing the idempotency
