added translation keys and default texts for settings page cards.

--- a/packages/admin-ui/ui/public/locales/en/translation.json
+++ b/packages/admin-ui/ui/public/locales/en/translation.json
@@ -1790,6 +1790,23 @@
   "settings-back-to-settings": "Back to settings",
   "settings-save": "Save",
   "settings-cancel": "Cancel",
+  "settings-api-key-management": "API Key Management",
+  "settings-api-key-management-description": "Create and manage API keys",
+  "settings-currencies": "Currencies",
+  "settings-currencies-description": "Manage the currencies of your store",
+  "settings-personal-information": "Personal Information",
+  "settings-personal-information-description": "Manage your Medusa profile",
+  "settings-regions": "Regions",
+  "settings-regions-description": "Manage shipping, payment, and fulfillment across regions",
+  "settings-return-reasons": "Return Reasons",
+  "settings-return-reasons-description": "Manage reasons for returned items",
+  "settings-sales-channels": "Sales Channels",
+  "settings-sales-channels-description": "Control which product are available in which channels",
+  "settings-store-details-description": "Manage your business details",
+  "settings-taxes": "Taxes",
+  "settings-taxes-description": "Manage taxes across regions and products",
+  "settings-the-team": "The Team",
+  "settings-the-team-description": "Manage users of your Medusa Store",
   "settings-store-details": "Store Details",
   "settings-manage-your-business-details": "Manage your business details",
   "settings-general": "General",
