perf(admin-ui): better translation

--- a/packages/admin-ui/ui/public/locales/zh/translation.json
+++ b/packages/admin-ui/ui/public/locales/zh/translation.json
@@ -506,8 +506,8 @@
   "product-table-status": "状态",
   "product-table-availability": "可用性",
   "product-table-inventory": "库存",
-  "product-table-inventory-in-stock-count_one": "{{count}} 个变体有库存",
-  "product-table-inventory-in-stock-count_other": "{{count}} 个变体有库存",
+  "product-table-inventory-in-stock-count_one": "库存在{{count}}个变体中",
+  "product-table-inventory-in-stock-count_other": "库存在{{count}}个变体中",
   "reservation-form-location": "位置",
   "reservation-form-choose-where-you-wish-to-reserve-from": "选择您希望从哪里预订。",
   "reservation-form-item-to-reserve": "要预订的项目",
