docs: documentation updates for v1.20

--- a/www/apps/docs/content/plugins/payment/stripe.mdx
+++ b/www/apps/docs/content/plugins/payment/stripe.mdx
@@ -99,6 +99,8 @@ If you store environment variables differently on your backend, for example, usi
 
 :::
 
+### Webhook Options
+
 Next, if you’re installing this plugin for production use, you need to retrieve the Webhook secret. Webhooks allows you to track different events on your Medusa backend, such as failed payments.
 
 Go to Webhooks on Stripe’s developer dashboard. Then, choose the Add an Endpoint button.
@@ -111,6 +113,17 @@ After the Webhook is created, you’ll see "Signing secret" in the Webhook detai
 
 ```bash
 STRIPE_WEBHOOK_SECRET=whsec_...
+```
+
+You can also set the following environment variables to configure Stripe's webhook functionality:
+
+```bash
+# The delay in milliseconds before processing the
+# webhook event. By default, it's `5000` (5 seconds).
+STRIPE_WEBHOOK_DELAY=3000
+# The number of times to retry the webhook event processing
+# in case of an error. By default, it's `3`.
+STRIPE_WEBHOOK_RETRIES=5
 ```
 
 ---
