--- a/www/apps/docs/content/upgrade-guides/plugins/stripe/6-0-7.md
+++ b/www/apps/docs/content/upgrade-guides/plugins/stripe/6-0-7.md
@@ -25,13 +25,13 @@ The endpoints and subscribers in the plugin have been migrated to use our new AP
 
 The webhook event management has changed significantly; previously, it used in-band processing of the webhook events. Following this update, the Event Bus Service is used to process the event in a background job instead.
 
-There were several motivations for this change: 
+There were several motivations for this change:
 
 1. It's deemed best practice to respond with a 200 immediately upon receiving a webhook request.
 2. It allows for the retry mechanism to kick-in in case the processing fails.
 3. It provides more control of how the event is processed.
 
-One example of the latter: starting from this release, you can now set a delay on processing events to avoid conflicts stemming from race conditions between the webhook and client requests. By default, the delay is 5 seconds. Learn more in [stripe's plugin guide](../../../plugins/payment/stripe.mdx)
+One example of the latter: starting from this release, you can now set a delay on processing events to avoid conflicts stemming from race conditions between the webhook and client requests. By default, the delay is five seconds. Learn more in [stripe's plugin guide](../../../plugins/payment/stripe.mdx)
 
 ---
 
