--- a/www/apps/docs/content/upgrade-guides/plugins/stripe/6-0-7.md
+++ b/www/apps/docs/content/upgrade-guides/plugins/stripe/6-0-7.md
@@ -31,7 +31,9 @@ There were several motivations for this change:
 2. It allows for the retry mechanism to kick-in in case the processing fails.
 3. It provides more control of how the event is processed.
 
-One example of the latter: starting from this release, you can now set a delay on processing events to avoid conflicts stemming from race conditions between the webhook and client requests. By default, the delay is five seconds. Learn more in [stripe's plugin guide](../../../plugins/payment/stripe.mdx)
+One example of the latter: starting from this release, you can now set a delay on processing events to avoid conflicts stemming from race conditions between the webhook and client requests. By default, the delay is five seconds.
+
+Learn more about the new webhook options in [the stripe plugin's guide](../../../plugins/payment/stripe.mdx)
 
 ---
 
