changed note about icon sizes

--- a/www/apps/ui/src/content/docs/icons/overview.mdx
+++ b/www/apps/ui/src/content/docs/icons/overview.mdx
@@ -51,12 +51,4 @@ You can also use a CSS class by passing the `className` prop.
 
 ### Icon Size
 
-By default, icons' width and height are `20px`.
-
-You can pass the `width` or `height` props to change the icon's size.
-
-<ComponentExample name="icon-size-props" />
-
-You can also pass Tailwind CSS width or height classes in the `className` prop.
-
-<ComponentExample name="icon-size-classes" />
+All icon's width and height are `20px` and it's not possible to change them.
