--- a/packages/admin-ui/ui/public/locales/zh/translation.json
+++ b/packages/admin-ui/ui/public/locales/zh/translation.json
@@ -506,8 +506,8 @@
   "product-table-status": "状态",
   "product-table-availability": "可用性",
   "product-table-inventory": "库存",
-  "product-table-inventory-in-stock-count_one": "库存在{{count}}个变体中",
-  "product-table-inventory-in-stock-count_other": "库存在{{count}}个变体中",
+  "product-table-inventory-in-stock-count_one": "个库存在{{count}}个变体中",
+  "product-table-inventory-in-stock-count_other": "个库存在{{count}}个变体中",
   "reservation-form-location": "位置",
   "reservation-form-choose-where-you-wish-to-reserve-from": "选择您希望从哪里预订。",
   "reservation-form-item-to-reserve": "要预订的项目",
@@ -1794,7 +1794,7 @@
   "settings-manage-your-business-details": "管理您的业务详情",
   "settings-general": "常规",
   "settings-store-name": "商店名称",
-  "settings-store": "Acme 商店",
+  "settings-medusa-store": "美杜莎商店",
   "settings-advanced-settings": "高级设置",
   "settings-swap-link-template": "交换链接模板",
   "settings-draft-order-link-template": "草稿订单链接模板",
@@ -1808,9 +1808,9 @@
   "edit-user-information-submit-and-close": "提交并关闭",
   "personal-information-back-to-settings": "返回设置",
   "personal-information-personal-information": "个人信息",
-  "personal-information-manage-your-profile": "管理您的个人资料",
+  "personal-information-manage-your-medusa-profile": "管理您的个人资料",
   "personal-information-language-settings-title": "语言",
-  "personal-information-language-settings-description": "调整管理员的语言",
+  "personal-information-language-settings-description": "调整界面语言",
   "personal-information-language-settings-help-us-translate": "帮助我们翻译",
   "personal-information-usage-insights-title": "使用见解",
   "usage-insights-disabled": "已禁用",
@@ -1967,7 +1967,7 @@
   "taxes-tax-code": "税收代码",
   "taxes-edit-tax-rate": "编辑税率",
   "taxes-back-to-settings": "返回设置",
-  "taxes-regions": "区域",
+  "taxes-regions": "税收",
   "taxes-select-the-region-you-wish-to-manage-taxes-for": "选择要管理税收的区域",
   "taxes-go-to-region-settings": "转到区域设置",
   "taxes-successfully-created-tax-rate": "成功创建税率。",
