--- a/packages/admin-next/dashboard/public/locales/en/translation.json
+++ b/packages/admin-next/dashboard/public/locales/en/translation.json
@@ -6,6 +6,7 @@
     "create": "Create",
     "delete": "Delete",
     "edit": "Edit",
+    "add": "Add",
     "start": "Start",
     "end": "End",
     "apply": "Apply",
@@ -13,6 +14,7 @@
     "search": "Search",
     "of": "of",
     "results": "results",
+    "pages": "pages",
     "next": "Next",
     "prev": "Prev",
     "extensions": "Extensions",
