--- a/packages/admin-next/dashboard/public/locales/en/translation.json
+++ b/packages/admin-next/dashboard/public/locales/en/translation.json
@@ -140,7 +140,12 @@
   },
   "apiKeyManagement": {
     "domain": "API Key Management",
-    "createKey": "Create key"
+    "createKey": "Create key",
+    "createPublishableApiKey": "Create Publishable API Key",
+    "revoke": "Revoke",
+    "publishableApiKeyHint": "Publishable API keys are used to limit the scope of requests to specific sales channels.",
+    "deleteKeyWarning": "You are about to delete the API key {{name}}. This action cannot be undone.",
+    "revokeKeyWarning": "You are about to revoke the API key {{name}}."
   },
   "fields": {
     "name": "Name",
