--- a/www/apps/docs/content/references/fulfillment/classes/fulfillment.AbstractFulfillmentService.mdx
+++ b/www/apps/docs/content/references/fulfillment/classes/fulfillment.AbstractFulfillmentService.mdx
@@ -196,7 +196,7 @@ class MyFulfillmentService extends AbstractFulfillmentService {
   // ...
   async createFulfillment(
     data: Record<string, unknown>,
-    items: LineItem,
+    items: LineItem[],
     order: Order,
     fulfillment: Fulfillment
   ) {
