--- a/www/apps/docs/content/create-medusa-app.mdx
+++ b/www/apps/docs/content/create-medusa-app.mdx
@@ -221,7 +221,7 @@ Based on what you're building, you can find a development path for you in the Re
   sections={[
     {
       title: "Admin Login or User Errors",
-      content: <Port />
+      content: <PortError />
     },
     {
       title: 'Can\'t connect to database with --db-url option',
