init work on cg domain

--- a/packages/admin-next/dashboard/public/locales/en/translation.json
+++ b/packages/admin-next/dashboard/public/locales/en/translation.json
@@ -69,7 +69,8 @@
     "domain": "Customers"
   },
   "customerGroups": {
-    "domain": "Customer Groups"
+    "domain": "Customer Groups",
+    "createGroup": "Create group"
   },
   "orders": {
     "domain": "Orders"
