--- a/packages/admin-next/dashboard/public/locales/en/translation.json
+++ b/packages/admin-next/dashboard/public/locales/en/translation.json
@@ -86,7 +86,8 @@
     "createCustomerGroupHint": "Create a new customer group to segment your customers.",
     "customerAlreadyAdded": "The customer has already been added to the group.",
     "editCustomerGroup": "Edit Customer Group",
-    "removeProductWarning": "You are about to remove {{email}} from the customer group. This action cannot be undone."
+    "removeCustomersWarning_one": "You are about to remove {{count}} customer from the customer group. This action cannot be undone.",
+    "removeCustomersWarning_other": "You are about to remove {{count}} customers from the customer group. This action cannot be undone."
   },
   "orders": {
     "domain": "Orders"
