--- a/packages/admin-next/dashboard/public/locales/en/translation.json
+++ b/packages/admin-next/dashboard/public/locales/en/translation.json
@@ -35,6 +35,7 @@
     "areYouSure": "Are you sure?",
     "noRecordsFound": "No records found",
     "typeToConfirm": "Please type {val} to confirm:",
+    "noResultsTitle": "No results",
     "noResultsMessage": "Try changing the filters or search query",
     "noRecordsTitle": "No records",
     "noRecordsMessage": "There are no records to show",
